--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3"
+version: '3'
 
 services:
   postgres:
@@ -11,7 +11,7 @@ services:
       POSTGRES_PASSWORD: postgres
 
   subquery-node:
-    image: octopus-subql-node:latest # from onfinality/subql-node:latest # docker build -t octopus-subql-node .
+    image: onfinality/subql-node:latest
     depends_on:
       - "postgres"
     restart: always
@@ -21,10 +21,11 @@ services:
       DB_DATABASE: postgres
       DB_HOST: postgres
       DB_PORT: 5432
+    volumes:
+      - ./:/app
     command:
       - -f=/app
       - --local
-      - --network-endpoint=wss://barnacle.rpc.testnet.oct.network:9944
 
   graphql-engine:
     image: onfinality/subql-query:latest
