--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,15 +1,20 @@
 steps:
 - name: "gcr.io/cloud-builders/docker"
-  args: ["build", "-t", "gcr.io/$PROJECT_ID/$REPO_NAME-octopus:$COMMIT_SHA", "."]
+  args: ['build',
+         '--build-arg',
+         'RELEASE_VERSION=0.15.1',
+         '-t',
+         'gcr.io/$PROJECT_ID/$REPO_NAME:$COMMIT_SHA',
+         '.']
 - name: "gcr.io/cloud-builders/docker"
-  args: ["push", "gcr.io/$PROJECT_ID/$REPO_NAME-octopus:$COMMIT_SHA"]
-- name: "gcr.io/cloud-builders/gke-deploy"
-  args:
-  - run
-  - --filename=octopus.yaml
-  - --image=gcr.io/$PROJECT_ID/$REPO_NAME-octopus:$COMMIT_SHA
-  - --location=asia-east1-c
-  - --cluster=cluster-1
-timeout: 1800s
+  args: ["push", "gcr.io/$PROJECT_ID/$REPO_NAME:$COMMIT_SHA"]
+  # - name: "gcr.io/cloud-builders/gke-deploy"
+  #   args:
+  #   - run
+  #   - --filename=octopus.yaml
+  #   - --image=gcr.io/$PROJECT_ID/$REPO_NAME-octopus:$COMMIT_SHA
+  #   - --location=asia-east1-c
+  #   - --cluster=cluster-1
+  # timeout: 1800s
 options:
   machineType: 'E2_HIGHCPU_32'
