--- a/project.yaml
+++ b/project.yaml
@@ -3,6 +3,7 @@ description: ''
 repository: https://github.com/octopus-network/octopus-subql
 schema: ./schema.graphql
 network:
+  endpoint: wss://polkadot.api.onfinality.io/public-ws
   types:
     AccountInfo: AccountInfoWithDualRefCount
     Address: MultiAddress
