--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,27 +1,27 @@
 steps:
-- name: "gcr.io/cloud-builders/docker"
+- name: 'gcr.io/cloud-builders/docker'
   args: ['build',
          '--build-arg',
-         'RELEASE_VERSION=0.15.1',
+         'RELEASE_VERSION=${_NODE_RELEASE_VERSION}',
          '-t',
-         'gcr.io/$PROJECT_ID/$REPO_NAME-node:$COMMIT_SHA',
+         'gcr.io/$PROJECT_ID/$REPO_NAME-node:${_NODE_RELEASE_VERSION}',
          '-f',
          'subql-node.Dockerfile',
          '.']
-- name: "gcr.io/cloud-builders/docker"
-  args: ["push", "gcr.io/$PROJECT_ID/$REPO_NAME-node:$COMMIT_SHA"]
-- name: "gcr.io/cloud-builders/docker"
+- name: 'gcr.io/cloud-builders/docker'
+  args: ['push', 'gcr.io/$PROJECT_ID/$REPO_NAME-node:${_NODE_RELEASE_VERSION}']
+- name: 'gcr.io/cloud-builders/docker'
   args: ['build',
          '--build-arg',
-         'RELEASE_VERSION=0.5.1',
+         'RELEASE_VERSION=${_QUERY_RELEASE_VERSION}',
          '-t',
-         'gcr.io/$PROJECT_ID/$REPO_NAME-query:$COMMIT_SHA',
+         'gcr.io/$PROJECT_ID/$REPO_NAME-query:${_QUERY_RELEASE_VERSION}',
          '-f',
          'subql-query.Dockerfile',
          '.']
-- name: "gcr.io/cloud-builders/docker"
-  args: ["push", "gcr.io/$PROJECT_ID/$REPO_NAME-query:$COMMIT_SHA"]
-  # - name: "gcr.io/cloud-builders/gke-deploy"
+- name: 'gcr.io/cloud-builders/docker'
+  args: ['push', 'gcr.io/$PROJECT_ID/$REPO_NAME-query:${_QUERY_RELEASE_VERSION}']
+  # - name: 'gcr.io/cloud-builders/gke-deploy'
   #   args:
   #   - run
   #   - --filename=octopus.yaml
@@ -29,5 +29,8 @@ steps:
   #   - --location=asia-east1-c
   #   - --cluster=cluster-1
   # timeout: 1800s
+substitutions:
+    _NODE_RELEASE_VERSION: 0.15.1
+    _QUERY_RELEASE_VERSION: 0.5.1
 options:
   machineType: 'E2_HIGHCPU_32'
