--- a/appchain-subql.yaml
+++ b/appchain-subql.yaml
@@ -13,6 +13,28 @@ spec:
     spec:
       serviceAccountName: subql-ksa
       containers:
+      - name: cloud-sql-proxy
+        image: gcr.io/cloudsql-docker/gce-proxy:1.17
+        command:
+          - "/cloud_sql_proxy"
+          - "-instances=octopus-dev-309403:asia-east1:octopus=tcp:5432"
+        securityContext:
+          # The default Cloud SQL proxy image runs as the
+          # "nonroot" user and group (uid: 65532) by default.
+          runAsNonRoot: true
+        # Resource configuration depends on an application's requirements. You
+        # should adjust the following values based on what your application
+        # needs. For details, see https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/
+        resources:
+          requests:
+            # The proxy's memory use scales linearly with the number of active
+            # connections. Fewer open connections will use less memory. Adjust
+            # this value based on your application's requirements.
+            memory: "2Gi"
+            # The proxy's CPU use scales linearly with the amount of IO between
+            # the database and the application. Adjust this value based on your
+            # application's requirements.
+            cpu:    "1"
       - name: application-appchain-barnacle-node
         image: "gcr.io/octopus-dev-309403/octopus-subql-node:0.15.1"
         args:
@@ -31,7 +53,7 @@ spec:
             secretKeyRef:
               name: octopus-subql
               key: password
-        - name: DB_NAME
+        - name: DB_DATABASE
           valueFrom:
             secretKeyRef:
               name: octopus-subql
@@ -39,12 +61,14 @@ spec:
       - name: application-appchain-barnacle-query
         image: "gcr.io/octopus-dev-309403/octopus-subql-query:0.5.1"
         ports:
-        - containerPort: 3000
+        - containerPort: 3001
           name: http-rpc
         args:
           - --name=barnacle
           - --playground
         env:
+        - name: PORT
+          value: "3001"
         - name: DB_USER
           valueFrom:
             secretKeyRef:
@@ -55,39 +79,8 @@ spec:
             secretKeyRef:
               name: octopus-subql
               key: password
-        - name: DB_NAME
+        - name: DB_DATABASE
           valueFrom:
             secretKeyRef:
               name: octopus-subql
               key: database
-      - name: cloud-sql-proxy
-        # It is recommended to use the latest version of the Cloud SQL proxy
-        # Make sure to update on a regular schedule!
-        image: gcr.io/cloudsql-docker/gce-proxy:1.17
-        command:
-          - "/cloud_sql_proxy"
-
-          # If connecting from a VPC-native GKE cluster, you can use the
-          # following flag to have the proxy connect over private IP
-          # - "-ip_address_types=PRIVATE"
-
-          # Replace DB_PORT with the port the proxy should listen on
-          # Defaults: MySQL: 3306, Postgres: 5432, SQLServer: 1433
-          - "-instances=octopus-dev-309403:asia-east1:octopus-subql=tcp:5432"
-        securityContext:
-          # The default Cloud SQL proxy image runs as the
-          # "nonroot" user and group (uid: 65532) by default.
-          runAsNonRoot: true
-        # Resource configuration depends on an application's requirements. You
-        # should adjust the following values based on what your application
-        # needs. For details, see https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/
-        resources:
-          requests:
-            # The proxy's memory use scales linearly with the number of active
-            # connections. Fewer open connections will use less memory. Adjust
-            # this value based on your application's requirements.
-            memory: "2Gi"
-            # The proxy's CPU use scales linearly with the amount of IO between
-            # the database and the application. Adjust this value based on your
-            # application's requirements.
-            cpu:    "1"
