--- a/appchain-subql.yaml
+++ b/appchain-subql.yaml
@@ -1,15 +1,15 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: deployment-appchain-barnacle
+  name: deployment-appchain
 spec:
   selector:
     matchLabels:
-      app: application-appchain-barnacle
+      app: application-appchain
   template:
     metadata:
       labels:
-        app: application-appchain-barnacle
+        app: application-appchain
     spec:
       serviceAccountName: subql-ksa
       containers:
@@ -35,7 +35,7 @@ spec:
             # the database and the application. Adjust this value based on your
             # application's requirements.
             cpu:    "1"
-      - name: application-appchain-barnacle-node
+      - name: application-appchain-node
         image: "gcr.io/octopus-dev-309403/octopus-subql-node:0.15.1"
         args:
           - -f=/workdir
@@ -58,7 +58,7 @@ spec:
             secretKeyRef:
               name: octopus-subql
               key: database
-      - name: application-appchain-barnacle-query
+      - name: application-appchain-query
         image: "gcr.io/octopus-dev-309403/octopus-subql-query:0.5.1"
         ports:
         - containerPort: 3001
@@ -88,15 +88,15 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: application-appchain-barnacle-query-service
+  name: application-appchain-query-service
   labels:
-    app: application-appchain-barnacle-query-service
+    app: application-appchain
 spec:
   ports:
   - port: 3001
     name: http-rpc
-    protocol: "TCP"
+    protocol: TCP
     targetPort: 3001
   selector:
-    app: application-appchain-barnacle
+    app: application-appchain
   type: LoadBalancer
