--- a/appchain-subql.yaml
+++ b/appchain-subql.yaml
@@ -1,15 +1,15 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: deployment-appchain-barnacle
+  name: appchain-subql-barnacle
 spec:
   selector:
     matchLabels:
-      app: application-appchain-barnacle
+      app: subql
   template:
     metadata:
       labels:
-        app: application-appchain-barnacle
+        app: subql
     spec:
       serviceAccountName: subql-ksa
       containers:
@@ -35,7 +35,7 @@ spec:
             # the database and the application. Adjust this value based on your
             # application's requirements.
             cpu:    "1"
-      - name: application-appchain-barnacle-node
+      - name: subql-node
         image: "gcr.io/octopus-dev-309403/octopus-subql-node:0.15.1"
         args:
           - -f=/workdir
@@ -58,7 +58,7 @@ spec:
             secretKeyRef:
               name: octopus-subql
               key: database
-      - name: application-appchain-barnacle-query
+      - name: subql-query
         image: "gcr.io/octopus-dev-309403/octopus-subql-query:0.5.1"
         ports:
         - containerPort: 3001
@@ -84,3 +84,19 @@ spec:
             secretKeyRef:
               name: octopus-subql
               key: database
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: appchain-subql-query-service-barnacle
+  labels:
+    app: subql
+spec:
+  ports:
+  - port: 3001
+    name: http-rpc
+    protocol: TCP
+    targetPort: 3001
+  selector:
+    app: subql
+  type: LoadBalancer
