--- a/project.yaml
+++ b/project.yaml
@@ -3,7 +3,41 @@ description: ''
 repository: https://github.com/octopus-network/octopus-subql
 schema: ./schema.graphql
 network:
-  endpoint: wss://polkadot.api.onfinality.io/public-ws
+  endpoint: wss://gateway.testnet.octopus.network/barnacle/c2b940112e5dfee04d8569bc00412bba
+  types:
+    BeefyKey: "[u8; 33]"
+    SessionKeys5B: "(AccountId, AccountId, AccountId, AccountId, BeefyKey)"
+    Validator:
+      id: AccountId
+      weight: u128
+    ValidatorSet:
+      sequence_number: u32
+      set_id: u32
+      validators: Vec<Validator>
+    BurnEvent:
+      sequence_number: u32
+      sender_id: Vec<u8>
+      receiver: AccountId
+      amount: u128
+    LockEvent:
+      sequence_number: u32
+      token_id: Vec<u8>
+      sender_id: Vec<u8>
+      receiver: AccountId
+      amount: u128
+    AssetIdOf: u32
+    AssetBalanceOf: u128
+    TAssetBalance: u128
+    Observation:
+      _enum:
+        UpdateValidatorSet: "(ValidatorSet<AccountId>)"
+        Burn: "(BurnEvent<AccountId>)"
+        LockAsset: "(LockEvent<AccountId>)"
+    ObservationsPayload:
+      public: "[u8; 30]"
+      block_number: BlockNumber
+      fact_sequence: u64
+      observations: Vec<Observation<AccountId>>
 
 dataSources:
   - name: main
