--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,28 +1,27 @@
 steps:
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['build',
-         '--build-arg',
-         'RELEASE_VERSION=${_NODE_RELEASE_VERSION}',
-         '-t',
-         'gcr.io/$PROJECT_ID/$REPO_NAME-node:${_NODE_RELEASE_VERSION}',
-         '-f',
-         'subql-node.Dockerfile',
-         '.']
+  args:
+  - build
+  - --build-arg
+  - RELEASE_VERSION=${_NODE_RELEASE_VERSION}
+  - -t
+  - us-central1-docker.pkg.dev/$PROJECT_ID/octopus/$REPO_NAME-node
+  - -f
+  - subql-node.Dockerfile
+  - .
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['push', 'gcr.io/$PROJECT_ID/$REPO_NAME-node:${_NODE_RELEASE_VERSION}']
-- name: 'gcr.io/cloud-builders/docker'
-  args: ['build',
-         '--build-arg',
-         'RELEASE_VERSION=${_QUERY_RELEASE_VERSION}',
-         '-t',
-         'gcr.io/$PROJECT_ID/$REPO_NAME-query:${_QUERY_RELEASE_VERSION}',
-         '-f',
-         'subql-query.Dockerfile',
-         '.']
-- name: 'gcr.io/cloud-builders/docker'
-  args: ['push', 'gcr.io/$PROJECT_ID/$REPO_NAME-query:${_QUERY_RELEASE_VERSION}']
+  args:
+  - build
+  - --build-arg
+  - RELEASE_VERSION=${_QUERY_RELEASE_VERSION}
+  - -t
+  - us-central1-docker.pkg.dev/$PROJECT_ID/octopus/$REPO_NAME-query
+  - -f
+  - subql-query.Dockerfile
+  - .
 substitutions:
   _NODE_RELEASE_VERSION: 0.15.1
   _QUERY_RELEASE_VERSION: 0.5.1
-options:
-  machineType: 'E2_HIGHCPU_32'
+images:
+- us-central1-docker.pkg.dev/$PROJECT_ID/octopus/$REPO_NAME-node
+- us-central1-docker.pkg.dev/$PROJECT_ID/octopus/$REPO_NAME-query
